fixed visible footer

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,4 +1,7 @@
 @import "src/variables";
+.footerNone{
+  display: none;
+}
 .footer {
   width: 100%;
   margin-top: 30px;
